lib/tests/fixtures/compiler/parser/ineffective_unary.baseline
Error: ineffective_unary.pp:1:1: ineffective statements may only appear as the last statement at top-level or inside functions and conditional expressions.
  -($a = 5)
  ^~~~~~~~~
