lib/tests/fixtures/compiler/parser/ineffective_unary.pp
-($a = 5)
notice last
